--- a/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Zonelist.cshtml
@@ -89,7 +89,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label for="ddlorgname" class="control-label">OrganizationName</label>
-                            @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
                         </div>
                         <div class="form-group col-md-12">
