--- a/ERPWeb/Views/AgroConfiguration/Regionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Regionlist.cshtml
@@ -31,7 +31,7 @@
                                                 </h5>
                                             </div>
                                             <div class="col-md-3">
-                                                <a href="/AgroConfiguration/CreateRegionlist" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Zone</a>
+                                                <a href="/AgroConfiguration/CreateRegionlist" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Region</a>
                                             </div>
                                         </div>
                                     </div>
