--- a/ERPWeb/Views/AgroConfiguration/GetZoneInfo.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetZoneInfo.cshtml
@@ -64,7 +64,7 @@
                                         <div class="row" style="margin-top:-15px">
                                             <div class="col-md-3">
                                                 <label for="ddlZoneName" class="control-label">Zone Name</label>
-                                                @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Select Material--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                                @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Select Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                             </div>
 
